// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Player Renders the structure of dailymotion tags 1`] = `
<DocumentFragment>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://www.dailymotion.com/embed/video/123456?sharing-enable=false&autoplay=false&mute=false&controls=false"
  />
</DocumentFragment>
`;

exports[`Video Player Renders the structure of html5 player tags 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      height="100%"
      poster=""
      preload="auto"
    >
      <source
        src="http://ext.com/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Video Player Renders the structure of vimeo tags 1`] = `
<DocumentFragment>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://player.vimeo.com/video/123456?dnt=1&autoplay=0&muted=0&loop=0"
  />
</DocumentFragment>
`;

exports[`Video Player Renders the structure of youtube tags 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="http://youtube.com/video/123456"
  />
</DocumentFragment>
`;

exports[`Video Player Renders the structure with title property 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="http://youtube.com/video/123456"
    title="Sample Video Title"
  />
</DocumentFragment>
`;
